# KitsuNet

./: Cargo.toml  README.md  config.toml  server.pcap
config/: config.toml  iccp.toml  iec104.toml  mms.toml  modbus.toml
pcap/: 61850mms.pcapng  ICCP_anon.pcapng  modbus.pcapng
src/: client.rs  client5g.rs  lib.rs  main.rs  network.rs  pcap.rs  server.rs  socket.rs
src/backup/: main copy.rs  main.rs  server.rs
ueransim/config/: open5gs-ue.yaml
