[package]
name = "trafik"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "2.2.0"
pnet = "0.35.0"
caps = "0.5.5"
if-addrs = "0.13.3"
log = "0.4.22"
env_logger = "0.11.5"
checksum = "0.2.1"
signal-hook = "0.3.17"
nix = "0.29.0"
libc = "0.2.159"
socket2 = {version = "0.5.7", features = ["all"] }
